--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -20,6 +20,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
