feat(color): add random color generator endpoint
- Add 'randomcolor' package to generate random colors.

- Create a new route '/color{/:format}' to expose the functionality.

- Implement a 'randomColorHandler' to handle requests to the new endpoint.

- Add a 'randomColor' utility function to encapsulate the color generation logic.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "randomcolor": "^0.6.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
